--- a/compilers/lightscript_0_5_9/package.json
+++ b/compilers/lightscript_0_5_9/package.json
@@ -1,10 +1,6 @@
 {
   "dependencies": {
     "babel-plugin-lightscript": "0.5.9",
-    "babylon-lightscript": "0.5.9",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-standalone": "^6.24.2"
+    "babylon-lightscript": "0.5.9"
   }
 }
