--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "pako": "^1.0.5",
     "react-mdl": "^1.10.0",
     "react-modal": "^1.7.7",
-    "recompose": "^0.23.1"
+    "recompose": "^0.23.1",
+    "babel-standalone": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-jsx": "^6.24.1"
   },
   "devDependencies": {
     "@oigroup/babel-preset-lightscript": "^1.0.4",
