--- a/package.json
+++ b/package.json
@@ -4,25 +4,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "brace": "^0.10.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.6.0",
-    "redux-components": "^0.4.6",
-    "redux-components-list": "^0.4.7",
+    "babel-plugin-partial-application": "^1.4.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-standalone": "^6.24.1",
     "base64-url": "^1.3.3",
+    "brace": "^0.10.0",
     "copy-to-clipboard": "^3.0.6",
     "hawks": "^0.1.4",
     "observable-utils": "^0.1.4",
     "pako": "^1.0.5",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-mdl": "^1.10.0",
     "react-modal": "^1.7.7",
+    "react-router-dom": "^4.1.1",
     "recompose": "^0.23.1",
-    "babel-standalone": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-jsx": "^6.24.1"
+    "redux": "^3.6.0",
+    "redux-components": "^0.4.6",
+    "redux-components-list": "^0.4.7"
   },
   "devDependencies": {
     "@oigroup/babel-preset-lightscript": "^1.0.4",
