--- a/plugins/flat/package.json
+++ b/plugins/flat/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "babel-plugin-partial-application": "^1.4.0",
+    "babel-plugin-partial-application": "^1.6.0-alpha.1",
     "babel-plugin-transform-react-jsx": "^6.24.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4"
