--- a/.eslintrc
+++ b/.eslintrc
@@ -9,10 +9,6 @@
       "unix"
     ],
     "no-console": 0,
-    "no-extra-semi": 0,
-    "no-unexpected-multiline": 0,
-    "no-empty-character-class": 0,
-    "no-regex-spaces": 0,
     "react/prop-types": 0
   },
   "parserOptions": {
@@ -20,7 +16,7 @@
   },
   "env": {
     "mocha": true,
-    "node": true
+    "browser": true
   },
   "extends": [
     "eslint:recommended",
