--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@oigroup/lightscript-runtime": "^0.1.1",
     "babel-standalone": "^6.24.1",
     "base64-url": "^1.3.3",
     "brace": "^0.10.0",
@@ -11,6 +12,7 @@
     "hawks": "^0.1.4",
     "observable-utils": "^0.1.4",
     "pako": "^1.0.5",
+    "@oigroup/prettier-babylon": "^1.4.5",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-mdl": "^1.10.0",
@@ -19,12 +21,11 @@
     "recompose": "^0.23.1",
     "redux": "^3.6.0",
     "redux-components": "^0.4.6",
-    "redux-components-list": "^0.4.7",
-    "@oigroup/lightscript-runtime": "^0.1.1"
+    "redux-components-list": "^0.4.7"
   },
   "devDependencies": {
-    "@oigroup/babel-preset-lightscript": "^2.0.0-rc.1",
-    "@oigroup/lightscript-eslint": "^2.0.0-rc.1.1",
+    "@oigroup/babel-preset-lightscript": "^2.0.0-rc.5",
+    "@oigroup/lightscript-eslint": "^2.0.0-rc.5",
     "autoprefixer": "7.1.0",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
