Added transform-flow-strip-types plugin and set it to run automatically. Also removed it from config so user cant disable it.

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,19 +4,20 @@
     "react"
   ],
   "rules": {
-    "linebreak-style": [
-      2,
-      "unix"
-    ],
     "no-console": 0,
     "react/prop-types": 0
   },
   "parserOptions": {
     "sourceType": "module"
   },
+  "globals": {
+    "RunKit": true
+  },
   "env": {
     "mocha": true,
-    "shared-node-browser": true
+    "shared-node-browser": true,
+    "browser": true,
+    "node": true
   },
   "extends": [
     "eslint:recommended",
