--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "private": true,
   "dependencies": {
     "@oigroup/lightscript-runtime": "^0.1.1",
+    "@oigroup/prettier-babylon": "^1.4.5",
     "babel-standalone": "^6.24.1",
     "base64-url": "^1.3.3",
     "brace": "^0.10.0",
     "copy-to-clipboard": "^3.0.6",
     "hawks": "^0.1.4",
+    "just-debounce": "^1.0.0",
     "observable-utils": "^0.1.4",
     "pako": "^1.0.5",
-    "@oigroup/prettier-babylon": "^1.4.5",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-mdl": "^1.10.0",
