--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "base64-url": "^1.3.3",
     "brace": "^0.10.0",
     "copy-to-clipboard": "^3.0.6",
+    "debounce-fn": "^1.0.0",
     "hawks": "^0.1.4",
-    "just-debounce": "^1.0.0",
     "observable-utils": "^0.1.4",
     "pako": "^1.0.5",
     "react": "^15.5.4",
