--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "dependencies": {
     "@oigroup/lightscript-runtime": "^0.1.1",
-    "babel-standalone": "^6.24.1",
+    "babel-standalone": "^6.26.0",
+    "@babel/standalone": "^7.1.0",
     "base64-url": "^1.3.3",
     "brace": "^0.10.0",
     "copy-to-clipboard": "^3.0.6",
