--- a/package.json
+++ b/package.json
@@ -1,122 +1,14 @@
 {
-  "name": "lscdiag",
+  "name": "lscdiag-monorepo",
+  "private": true,
   "homepage": "https://wcjohnson.github.io/lscdiag",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
-    "@lightscript/runtime": "^0.1.1",
-    "babel-standalone": "^6.26.0",
-    "@babel/standalone": "^7.1.0",
-    "base64-url": "^1.3.3",
-    "brace": "^0.10.0",
-    "copy-to-clipboard": "^3.0.6",
-    "hawks": "^0.1.4",
-    "observable-utils": "^0.1.4",
-    "pako": "^1.0.5",
-    "@oigroup/prettier-babylon": "^1.4.5",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-mdl": "^1.10.0",
-    "react-modal": "^1.7.7",
-    "react-router-dom": "^4.1.1",
-    "recompose": "^0.23.1",
-    "redux": "^3.6.0",
-    "redux-components": "^0.4.6",
-    "redux-components-list": "^0.4.7"
-  },
-  "devDependencies": {
-    "@lightscript/babel-preset": "4.0.0-alpha.12",
-    "@lightscript/eslint-plugin": "4.0.0-alpha.12",
-    "@babel/core": "7.1.0",
-    "@babel/runtime": "7.0.0",
-    "@babel/preset-env": "7.1.0",
-    "@babel/preset-react": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.1.0",
-    "@babel/plugin-transform-regenerator": "7.0.0",
-    "autoprefixer": "9.1.5",
-    "babel-jest": "23.6.0",
-    "babel-loader": "8.0.2",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.18",
-    "bfj": "6.1.1",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.1",
-    "css-loader": "1.0.0",
-    "dotenv": "6.0.0",
-    "dotenv-expand": "4.2.0",
-    "escape-string-regexp": "1.0.5",
-    "eslint": "5.6.0",
-    "eslint-loader": "2.1.1",
-    "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "7.11.1",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.11",
-    "fs-extra": "7.0.0",
-    "graphql": "^0.13.0",
-    "graphql-tag": "2.9.2",
-    "html-webpack-plugin": "4.0.0-alpha.2",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "23.6.0",
-    "loader-utils": "1.1.0",
-    "mini-css-extract-plugin": "0.4.3",
-    "object-assign": "4.1.1",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-safe-parser": "4.0.1",
-    "promise": "8.0.2",
-    "raf": "3.4.0",
-    "react-dev-utils": "^5.0.2",
-    "resolve": "1.8.1",
-    "sass-loader": "7.1.0",
-    "style-loader": "0.23.0",
-    "sw-precache-webpack-plugin": "0.11.5",
-    "terser-webpack-plugin": "1.1.0",
-    "thread-loader": "1.2.0",
-    "url-loader": "1.1.1",
-    "webpack": "4.19.1",
-    "webpack-dev-server": "3.1.8",
-    "webpack-manifest-plugin": "2.0.4",
-    "whatwg-fetch": "3.0.0"
+    "lerna": "^2.1.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node --max_old_space_size=4096 scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node",
-      "mjs"
-    ]
   }
 }
