--- a/package.json
+++ b/package.json
@@ -4,36 +4,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@lightscript/runtime": "^0.1.1",
-    "babel-standalone": "^6.26.0",
     "@babel/standalone": "^7.1.0",
+    "@lightscript/runtime": "^0.1.1",
+    "@oigroup/prettier-babylon": "^1.4.5",
+    "babel-standalone": "^6.26.0",
     "base64-url": "^1.3.3",
     "brace": "^0.10.0",
     "copy-to-clipboard": "^3.0.6",
+    "debounce-fn": "^1.0.0",
     "hawks": "^0.1.4",
     "observable-utils": "^0.1.4",
     "pako": "^1.0.5",
-    "@oigroup/prettier-babylon": "^1.4.5",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-mdl": "^1.10.0",
     "react-modal": "^1.7.7",
     "react-router-dom": "^4.1.1",
+    "react-runkit": "^0.9.0",
     "recompose": "^0.23.1",
     "redux": "^3.6.0",
     "redux-components": "^0.4.6",
-    "redux-components-list": "^0.4.7",
-    "debounce-fn": "^1.0.0"
+    "redux-components-list": "^0.4.7"
   },
   "devDependencies": {
-    "@lightscript/babel-preset": "4.0.0-alpha.12",
-    "@lightscript/eslint-plugin": "4.0.0-alpha.12",
     "@babel/core": "7.1.0",
-    "@babel/runtime": "7.0.0",
+    "@babel/plugin-transform-regenerator": "7.0.0",
+    "@babel/plugin-transform-runtime": "7.1.0",
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.1.0",
-    "@babel/plugin-transform-regenerator": "7.0.0",
+    "@babel/runtime": "7.0.0",
+    "@lightscript/babel-preset": "4.0.0-alpha.12",
+    "@lightscript/eslint-plugin": "4.0.0-alpha.12",
     "autoprefixer": "9.1.5",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.2",
