--- a/lscdiag/package.json
+++ b/lscdiag/package.json
@@ -22,89 +22,99 @@
     "redux-components-list": "^0.4.7"
   },
   "devDependencies": {
-    "@lightscript/babel-preset": "4.0.0-alpha.13",
-    "@lightscript/eslint-plugin": "^4.0.0-alpha.13",
-    "@babel/core": "7.1.0",
-    "@babel/runtime": "7.0.0",
+    "@babel/core": "7.1.2",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/plugin-transform-runtime": "7.1.0",
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.1.0",
-    "@babel/plugin-transform-regenerator": "7.0.0",
-    "autoprefixer": "9.1.5",
+    "@babel/runtime": "7.1.2",
+    "@lightscript/babel-preset": "4.0.0-alpha.18",
+    "@lightscript/eslint-plugin": "4.0.0-alpha.18",
+    "@svgr/webpack": "2.4.1",
+    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
-    "babel-loader": "8.0.2",
+    "babel-loader": "8.0.4",
+    "babel-plugin-macros": "2.4.2",
+    "babel-plugin-named-asset-import": "^0.2.2",
+    "babel-plugin-transform-dynamic-import": "2.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.18",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
+    "confusing-browser-globals": "1.0.3",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
-    "escape-string-regexp": "1.0.5",
-    "eslint": "5.6.0",
+    "eslint": "5.6.1",
     "eslint-loader": "2.1.1",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.11.1",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.11",
+    "file-loader": "2.0.0",
     "fs-extra": "7.0.0",
-    "graphql": "^0.13.0",
-    "graphql-tag": "2.9.2",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
-    "loader-utils": "1.1.0",
+    "jest-pnp-resolver": "1.0.1",
+    "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
-    "object-assign": "4.1.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
+    "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
+    "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
-    "promise": "8.0.2",
-    "raf": "3.4.0",
-    "react-dev-utils": "^5.0.2",
+    "react-app-polyfill": "^0.1.3",
+    "react-dev-utils": "^6.0.3",
     "resolve": "1.8.1",
+    "rimraf": "^2.6.2",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
-    "sw-precache-webpack-plugin": "0.11.5",
     "terser-webpack-plugin": "1.1.0",
-    "thread-loader": "1.2.0",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
-    "webpack-dev-server": "3.1.8",
+    "webpack-dev-server": "3.1.9",
     "webpack-manifest-plugin": "2.0.4",
-    "whatwg-fetch": "3.0.0"
+    "workbox-webpack-plugin": "3.6.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node --max_old_space_size=4096 scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "jest": {
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}"
+      "src/**/*.{js,jsx,lsc,lsx}"
     ],
+    "resolver": "jest-pnp-resolver",
     "setupFiles": [
-      "<rootDir>/config/polyfills.js"
+      "react-app-polyfill/jsdom"
     ],
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,lsc,lsx}",
+      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,lsc,lsx}"
     ],
-    "testEnvironment": "node",
+    "testEnvironment": "jsdom",
     "testURL": "http://localhost",
     "transform": {
-      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.(js|jsx|lsc|lsx)$": "<rootDir>/node_modules/babel-jest",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
     "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$",
+      "^.+\\.module\\.(css|sass|scss)$"
     ],
     "moduleNameMapper": {
-      "^react-native$": "react-native-web"
+      "^react-native$": "react-native-web",
+      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
     },
     "moduleFileExtensions": [
       "web.js",
@@ -112,8 +122,9 @@
       "json",
       "web.jsx",
       "jsx",
-      "node",
-      "mjs"
+      "lsc",
+      "lsx",
+      "node"
     ]
   }
 }
