--- a/lscdiag/package.json
+++ b/lscdiag/package.json
@@ -6,20 +6,23 @@
     "@lightscript/compiler-platform": "^0.1.0",
     "@lightscript/runtime": "^0.1.1",
     "@ormojo/fobs": "^1.0.6",
+    "@ormojo/react-observe": "^0.1.2",
     "base64-url": "^1.3.3",
-    "brace": "^0.10.0",
+    "brace": "^0.11.1",
     "copy-to-clipboard": "^3.0.6",
+    "classnames": "^2.2.6",
+    "lodash.isequal": "^4.5.0",
     "hawks": "^0.1.4",
     "pako": "^1.0.5",
     "react": "^16.5.2",
+    "react-breakpoints": "^3.0.2",
     "react-dom": "^16.5.2",
-    "react-mdl": "^1.10.0",
-    "react-modal": "^1.7.7",
     "react-router-dom": "^4.1.1",
     "recompose": "^0.23.1",
     "redux": "^3.6.0",
     "redux-components": "^0.4.6",
-    "redux-components-list": "^0.4.7"
+    "redux-components-list": "^0.4.7",
+    "semantic-ui-react": "^0.82.5"
   },
   "devDependencies": {
     "@babel/core": "7.1.2",
@@ -81,7 +84,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node --max_old_space_size=4096 scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "clean": "rimraf build"
   },
   "browserslist": [
     ">0.2%",
