--- a/lscdiag/package.json
+++ b/lscdiag/package.json
@@ -9,15 +9,16 @@
     "@ormojo/react-observe": "^0.1.2",
     "base64-url": "^1.3.3",
     "brace": "^0.11.1",
-    "copy-to-clipboard": "^3.0.6",
     "classnames": "^2.2.6",
-    "lodash.isequal": "^4.5.0",
+    "copy-to-clipboard": "^3.0.6",
     "hawks": "^0.1.4",
+    "lodash.isequal": "^4.5.0",
     "pako": "^1.0.5",
     "react": "^16.5.2",
     "react-breakpoints": "^3.0.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.1.1",
+    "react-runkit": "^0.9.0",
     "recompose": "^0.23.1",
     "redux": "^3.6.0",
     "redux-components": "^0.4.6",
