build: Update to latest babel toolchain

--- a/lscdiag/package.json
+++ b/lscdiag/package.json
@@ -26,14 +26,14 @@
     "semantic-ui-react": "^0.82.5"
   },
   "devDependencies": {
-    "@babel/core": "7.1.2",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.1.0",
-    "@babel/preset-env": "7.1.0",
-    "@babel/preset-react": "7.0.0",
-    "@babel/runtime": "7.1.2",
-    "@lightscript/babel-preset": "4.0.0-alpha.18",
-    "@lightscript/eslint-plugin": "4.0.0-alpha.18",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/runtime": "^7.10.4",
+    "@lightscript/babel-preset": "^4.0.0-alpha.28",
+    "@lightscript/eslint-plugin": "^4.0.0-alpha.28",
     "@svgr/webpack": "2.4.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
